2007-12-03  Akim Demaille  <demaille@gostai.com>

	Emacs mode.
	* build-aux/urbi.as: here.

2007-12-03  Akim Demaille  <demaille@gostai.com>

	Be robust to undefined $exit.
	* rst.as: here.
	In liburbi-check the test pass instead of failing because
	exit was not initialized.

2007-12-03  Akim Demaille  <demaille@gostai.com>

	Try to avoid issuing colors on BuildBot.
	* check.mk: Update, using suggestion from J. Meyering, and R.
	Wildenhues.

2007-11-27  Akim Demaille  <demaille@gostai.com>

	Improve TC_PROG.
	* tc-prog.m4: Accept version numbers a la Bison.
	Of course this is not enough to recognize a CVS version.

2007-11-27  Akim Demaille  <demaille@gostai.com>

	Fix check_PROGRAMS etc. use.
	* check.mk (check_programs): New.
	Use it to make sure these programs are built before running
	the checking rules.

2007-11-27  Matthieu Nottale  <nottale@gostai.com>

	.
	* urbi.as: Remove --mixed option as it causes troubles in VPATH. Let
	  our scripts wrapping the compilers handle this.

2007-11-27  Akim Demaille  <demaille@gostai.com>

	make EXTERNAL-up-ch-ci.
	* svn-externals.mk: Support it.

2007-11-27  Akim Demaille  <demaille@gostai.com>

	Don't require bison --xml support.
	* bison++.in: Be robust to bison not supporting --xml.
	Be lazy when computing the html output too.

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Don't require XML 2 HTML.
	* bison++.in: Be less strict when building the html output.

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Use bison --xml.
	* bison++.in: Do it.
	Forget about output-to-html.  BTW,
	* output-to-html: Remove

2007-11-26  Akim Demaille  <demaille@gostai.com>

	Fix eol.
	* m4sh.mk: here.

2007-11-20  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Sync boost.m4 with upstream.
	* boost.m4: Here.

2007-11-20  Matthieu Nottale  <nottale@gostai.com>

	Properly quote function arguments.
	* children.as: Here.

2007-11-20  Akim Demaille  <akim@lrde.epita.fr>

	More distcheck flags.